--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,14 @@ django-registration==3.1.1
 django-rest-knox==4.1.0
 django-star-ratings==0.9.1
 djangorestframework==3.12.2
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.4.0
 gunicorn==19.9.0
 importlib-metadata==1.7.0
 Pillow==8.0.1
 psycopg2==2.8.6
 pycparser==2.20
+PyJWT==1.7.1
 python-decouple==3.3
 pytz==2020.4
 six==1.15.0
@@ -32,4 +35,3 @@ swapper==1.1.2.post1
 urllib3==1.26.2
 whitenoise==5.2.0
 zipp==3.4.0
-djangorestframework-simplejwt==4.4.0
